--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="filter orange"></div>
         <div class="filter brown"></div>
         <div class="filter pink"></div>
-        <div class="filter transparent"></div>
+        <div class="filter transparent">ORIGINAL</div>
     </div>
     <div class="filter-layer"></div>
     <span class="material-icons gallery">
